--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,13 +14,13 @@ body {
     padding-left: 0;
     padding-right: 0;
 }
-/*------ Header ------------*/
+/*--------- Header --------*/
 
 .nav-bar {
     min-height: 60px;
     background: #ecb535;
     display: flex;
-    justify-content: spacearound;
+    
     text-decoration: none;
     align-items: center;
     
@@ -31,8 +31,16 @@ body {
     font-size: 2em;
     margin: 10px 20px 10px 60px;
     text-align: center;
+    
 }
 
 #reset-all {
-    float:right;
+    margin: 10 20px 10px;
 }
+
+@media (min-width: 400px) {
+    #reset-all {
+      
+    }
+}
+
