--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,22 +20,26 @@ body {
     min-height: 60px;
     background: #ecb535;
     display: flex;
-    
+    justify-content:space-between;
     text-decoration: none;
     align-items: center;
     
 }
-.title {
+.title,
+.title:hover{
     color: black;
     text-decoration: none;
     font-size: 2em;
-    margin: 10px 20px 10px 60px;
     text-align: center;
+    
     
 }
 
 #reset-all {
     margin: 10 20px 10px;
+    float: right;
+    color:#ecb535;
+    
 }
 
 @media (min-width: 400px) {
