--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,7 @@ body {
 .col-sm-6,
 .col-sm-12
  {
-  margin : 10px;
+  margin : 0;
 
   /*background-color: #f9e6ba;*/
   border: 2px black;
@@ -60,4 +60,11 @@ body {
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
+}
+
+.chart {
+    width: 100%;
+    height: 100%;
+    margin: 0 0 10px 0;
+    
 }
