--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,5 +66,10 @@ body {
     width: 100%;
     height: 100%;
     margin: 0 0 10px 0;
-    
+   
 }
+.color {
+    display: flex;
+    flex-wrap: wrap;
+}  
+
