--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,8 +25,7 @@ body {
     align-items: center;
     
 }
-.title,
-.title:hover{
+.title {
     color: black;
     text-decoration: none;
     font-size: 2em;
@@ -42,6 +41,7 @@ body {
     color: black;
     font-size: 1em;
     
+    
 }
 
 @media (min-width: 400px) {
@@ -52,22 +52,33 @@ body {
 /*--------- Main --------*/
 
 /*----icons----*/
-.gender-percent{
-    display: flex;
-    text-align: center;
-}
 
+.gender-percent {
+  width: 130px;
+  height: 50px;
+  display :flex;
+  margin: auto;
+}
+.icons {
+    width: 50px;
+    height:50px;
+    text-align: center;
+    padding: 5px;
+    
+}
+.percent {
+    width :50px;
+    height: 50px;
+    text-align: right;
+    padding: 10px 5px 5px 5px;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
 .gender-icon {
     font-size: 4rem;
-    justify-content: space-around;
+    
 }
 
-.icons
-.percent {
-    margin: 10px 0 10px 10px;
-    padding: 5px;
-   
-}
 
 .col-sm-6,
 .col-sm-12
