--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding-top: 70px;
     overflow-x: hidden;
-    background-color: #fefbf5;
+    background-color:#f9ebba;
 }
 
 .container-fluid {
@@ -19,11 +19,12 @@ body {
     overflow:auto;
     height: 100%;
     padding: 15px 10px;
-    border-radius: 10px;
-    background-color:#FAD904;
+    border-radius: 5px;
+    background-color:#fefbf5;
     margin: 12.5px 0;
     text-align: center;
 }
+
 
 
 /*--------- Header --------*/
@@ -143,11 +144,11 @@ body {
     display: flex;
     flex-wrap: wrap;
 }  
-/*----table------*/
+/*----table---
 
 table {
   text-align: left;
-  background-color: black;
+  background-color: lightyellow;
   border-collapse: separate;
   border: 1px;
   width: 100%;
@@ -167,3 +168,38 @@ table td {
   border: 0;
   padding: 5px;
 }
+---*/
+
+#pagination, #all-characters-div{
+      width: 100%;
+      text-align: center;
+      padding: 0 0 5px 0;
+    }
+
+#all-characters {
+        text-align: left;
+        width:80%;
+        border: 1px solid black;
+        font-family: cursive;
+        border-collapse: separate;
+        border: 1px;
+        margin:auto;
+    }
+.page-footer {
+    width: 100%;
+    height: 50px;
+    background-color: #ecc535;
+   
+   }
+   .copyright{
+    color: black;
+    margin: 15px 0px 15px 10px;
+    font-weight: 300;
+    
+   }
+ .return-top a i{
+  float: right; 
+  font-size: 2.5rem;
+ 
+  color:black;
+ }
