--- a/static/css/style.css
+++ b/static/css/style.css
@@ -185,21 +185,26 @@ table td {
         border: 1px;
         margin:auto;
     }
+    
+/*--------- Footer --------*/
+
 .page-footer {
     width: 100%;
     height: 50px;
     background-color: #ecc535;
+    padding: 0;
+    margin: 0;
    
    }
-   .copyright{
-    color: black;
-    margin: 15px 0px 15px 10px;
-    font-weight: 300;
-    
-   }
- .return-top a i{
-  float: right; 
-  font-size: 2.5rem;
+.return-top{
+    text-align: right;
+    font-size: 2.5rem;
+                 
+}     
+
+.return-top a i{
+     color: black;
+     padding: 10px;
+}
+     
  
-  color:black;
- }
