--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,7 +47,7 @@ body {
     
 }
 
-#reset-all a {
+#reset-filters a {
     margin: 10 20px 10px;
     float: right;
     text-decoration: none;
@@ -133,7 +133,12 @@ body {
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
 }
-
+/*---
+#bar-alignment .x.axis text {
+    text-anchor: end !important;
+    transform: rotate(-45deg);
+}
+----*/
 .chart {
     width: 100%;
     height: 100%;
