--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,12 @@
-
 /*------ General Styling ------------*/
+
 body {
     height: 100%;
     width: 100%;
     margin: 0;
     padding-top: 70px;
     overflow-x: hidden;
-    background-color:#f9ebba;
+    background-color: #f9ebba;
 }
 
 .container-fluid {
@@ -14,27 +14,38 @@ body {
     padding-left: 0;
     padding-right: 0;
 }
+
 .content-wrapper {
     width: 100%;
-    overflow:auto;
+    overflow: auto;
     height: 100%;
     padding: 15px 10px;
     border-radius: 5px;
-    background-color:#fefbf5;
+    background-color: #fefbf5;
     margin: 12.5px 0;
     text-align: center;
 }
 
 /*--------- Modal--------*/
+
 .modal-backdrop {
-   background-color: transparent;
+    background-color: transparent;
 }
+
 @media screen and (max-width: 767px) {
-  #infoModal {
-    max-width: 100vw;
-  }
+    #infoModal {
+        max-width: 100vw;
+    }
 
 }
+
+/*.sub-modal{
+    float: right;
+    color: black;
+    cursor: pointer;
+    font-size: 1em;
+    padding-right: 5px;
+}*/
 
 /*--------- Header --------*/
 
@@ -42,19 +53,21 @@ body {
     min-height: 60px;
     background: #ecb535;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     text-decoration: none;
     align-items: center;
-    
+
 }
+
 .title {
     color: black;
     text-decoration: none;
     font-size: 2em;
     text-align: center;
-    
-    
+
+
 }
+
 /*
 .reset-all {
   height: 30px;
@@ -80,130 +93,101 @@ body {
 */
 
 #reset-filters {
-    display :flex;
-    margin: 10 20px 10px; 
-   
-}
-/*
-.reset a{
-  
-    float: right;
-    height: 25px;
-    width:70px;
-    text-decoration: none;
-    text-align: center;
-    font-size: 1em;
-    background-color: black;
-    color:  #ecb535;
-    border-radius: 3px;
-    
-   
-}*/
-.reset a i ,
-.info-icon a i{
-     font-size: 1.7em;
-     padding-right: 5px;
-     padding-left: 10px;
-     color: black;
+    display: flex;
+    margin: 10 20px 10px;
+
 }
 
-  
+.reset a i,
+.info-icon a i {
+    font-size: 1.7em;
+    padding-right: 5px;
+    padding-left: 10px;
+    color: black;
+}
+
+
 
 
 @media (min-width: 400px) {
-    #reset-all {
-      
-    }
+    #reset-all {}
 }
+
 /*--------- Main --------*/
+
 .gender-percent {
-  width: 300px;
-  height: 50px;
-  display :flex;
-  margin: auto;
+    width: 300px;
+    height: 50px;
+    display: flex;
+    margin: auto;
 
 }
+
 .icon-percent {
     margin: 5px;
-   display: flex;
-  justify-content:space-around;
-  background-color: lightyellow;
+    display: flex;
+    justify-content: space-around;
+    
 }
+
 .gender-icon {
     font-size: 4rem;
     padding: 3px;
-     width: 50px;
-    height:50px;
+    width: 50px;
+    height: 50px;
     margin: auto;
-   
-  }
-.percent {
-   font-weight: 600;
-   font-size: 1.5rem;
-   padding: 10px 3px;
-  
+
 }
 
-/*----icons--
-.sidebar{
-    display: flex;
-}
-.gender-percent {
-  width: 130px;
-  height: 50px;
-  display :flex;
-  margin: auto;
-}
-.icons {
-    width: 50px;
-    height:50px;
-    text-align: center;
-    padding: 5px;
-    
-}
 .percent {
-    width :50px;
-    height: 50px;
-    text-align: right;
-    padding: 10px 5px 5px 5px;
     font-weight: 600;
     font-size: 1.5rem;
-}
-.gender-icon {
-    font-size: 4rem;
-    
+    padding: 10px 3px;
+
 }
 
-----*/
-.col-sm-6,
+
+/*.col-sm-6,
 .col-sm-12
+
  {
   margin : 0;
 
-  /*background-color: #f9e6ba;*/
+  /*background-color: #f9e6ba;
   border: 2px black;
   border-radius: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
-}
+}*/
+
 /*---
 #bar-alignment .x.axis text {
     text-anchor: end !important;
     transform: rotate(-45deg);
 }
 ----*/
+
 .chart {
     width: 100%;
     height: 100%;
     margin: 0 0 10px 0;
-   
+
 }
+
 .color {
     display: flex;
     flex-wrap: wrap;
-}  
+}
+
+.chart-content {
+    text-align: center;
+    font-size: .8em;
+    padding: 10px 5% 0px 6%;
+}
+
+
 /*----table---
 
 table {
@@ -230,22 +214,23 @@ table td {
 }
 ---*/
 
-#pagination, #all-characters-div{
-      width: 100%;
-      text-align: center;
-      padding: 0 0 5px 0;
-    }
+#pagination,
+#all-characters-div {
+    width: 100%;
+    text-align: center;
+    padding: 0 0 5px 0;
+}
 
 #all-characters {
-        text-align: left;
-        width:80%;
-        border: 1px solid black;
-        font-family: cursive;
-        border-collapse: separate;
-        border: 1px;
-        margin:auto;
-    }
-    
+    text-align: left;
+    width: 80%;
+    border: 1px solid black;
+    font-family: cursive;
+    border-collapse: separate;
+    border: 1px;
+    margin: auto;
+}
+
 /*--------- Footer --------*/
 
 .page-footer {
@@ -254,17 +239,16 @@ table td {
     background-color: #ecc535;
     padding: 0;
     margin: 0;
-   
-   }
-.return-top{
+
+}
+
+.return-top {
     text-align: right;
     font-size: 2.5rem;
-    
-}     
 
-.return-top a i{
-     color: black;
-     padding: 10px;
 }
-     
- 
+
+.return-top a i {
+    color: black;
+    padding: 10px;
+}
