--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,9 +109,7 @@ body {
 
 
 
-@media (min-width: 400px) {
-    #reset-all {}
-}
+
 
 /*--------- Main --------*/
 
@@ -238,13 +236,14 @@ table td {
     height: 45px;
     background-color: #ecc535;
     padding: 0;
-    margin: 0;
+    margin-top: 10px;
 
 }
 
 .return-top {
     text-align: right;
-    font-size: 2.5rem;
+     font-size: 1.7em;
+     position: relative;
 
 }
 
