--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ body {
 
 .content-wrapper {
     width: 100%;
-    overflow: auto;
+    overflow: hidden;
     height: 100%;
     padding: 15px 10px;
     border-radius: 15px;
@@ -126,7 +126,7 @@ body {
     margin: 5px;
     display: flex;
     justify-content: space-around;
-    
+
 }
 
 .gender-icon {
@@ -140,13 +140,14 @@ body {
 
 .percent {
     font-weight: 600;
-    font-size: 1.5rem;
     padding: 10px 3px;
 
 }
+
 .sidebar {
     padding-left: 15px;
 }
+
 
 /*---
 #bar-alignment .x.axis text {
@@ -168,7 +169,6 @@ body {
 }
 
 .chart-content {
-    text-align: center;
     font-size: .8em;
     padding: 10px 5% 0px 6%;
 }
@@ -231,7 +231,7 @@ table td {
 .return-top {
     text-align: right;
     font-size: 1.7em;
-    
+
 }
 
 .return-top a i {
