--- a/static/css/style.css
+++ b/static/css/style.css
@@ -173,32 +173,14 @@ body {
     padding: 10px 5% 0px 6%;
 }
 
-
-/*----table---
-
-table {
-  text-align: left;
-  background-color: lightyellow;
-  border-collapse: separate;
-  border: 1px;
-  width: 100%;
-  margin: 0;
-  padding: 0;
+/*---------Table & Pagination--------*/
+td,
+th {
+    padding: 4px;
+    border: 1.5px solid steelblue;
+    border-radius: 5px;
+  
 }
-
-table th {
-  text-transform: uppercase;
-  font-family: "Cabin Sketch", cursive;
-  border: 0;
-  padding: 5px;
-}
-
-table td {
-  text-transform: capitalize;
-  border: 0;
-  padding: 5px;
-}
----*/
 
 #pagination,
 #all-characters-div {
@@ -231,7 +213,6 @@ table td {
 .return-top {
     text-align: right;
     font-size: 1.7em;
-
 }
 
 .return-top a i {
