--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,20 +33,6 @@ body {
     background-color: transparent;
 }
 
-@media screen and (max-width: 767px) {
-    #infoModal {
-        max-width: 100vh;
-    }
-
-}
-
-/*.sub-modal{
-    float: right;
-    color: black;
-    cursor: pointer;
-    font-size: 1em;
-    padding-right: 5px;
-}*/
 
 /*--------- Header --------*/
 
@@ -57,7 +43,6 @@ body {
     justify-content: space-between;
     text-decoration: none;
     align-items: center;
-
 }
 
 .title {
@@ -65,40 +50,13 @@ body {
     text-decoration: none;
     font-size: 2em;
     text-align: center;
-
-
 }
-
-/*
-.reset-all {
-  height: 30px;
-  margin: .6rem .5rem;
-  padding: 2%;
-  background-color: #fff;
-  border-radius: 3px;
-  color: white;
-  text-align: center;
-  cursor: pointer;
-  -webkit-transition: .5s;
-  transition: .5s;
-}
-
-.reset-all:hover {
-  background-color: #32e458;
-}
-
-.reset-all a {
-  text-decoration: none;
-}
-
-*/
 
 #reset-filters {
     display: flex;
     margin: 10 20px 10px;
 
 }
-
 .reset a i,
 .info-icon a i {
     font-size: 1.7em;
@@ -107,26 +65,20 @@ body {
     color: black;
 }
 
-
-
-
-
-
 /*--------- Main --------*/
 
 .gender-percent {
-    width: 300px;
+    width: 400px;
     height: 50px;
     display: flex;
     margin: auto;
-
+   
 }
 
 .icon-percent {
     margin: 5px;
     display: flex;
     justify-content: space-around;
-
 }
 
 .gender-icon {
@@ -135,17 +87,17 @@ body {
     width: 50px;
     height: 50px;
     margin: auto;
-
 }
 
 .percent {
     font-weight: 600;
     padding: 10px 3px;
-
 }
+
 
 .sidebar {
     padding-left: 15px;
+    padding-right:10px;
 }
 
 
@@ -160,7 +112,6 @@ body {
     width: 100%;
     height: 100%;
     margin: 0 0 10px 0;
-
 }
 
 .color {
@@ -179,7 +130,6 @@ th {
     padding: 4px;
     border: 1.5px solid steelblue;
     border-radius: 5px;
-  
 }
 
 #pagination,
@@ -207,7 +157,6 @@ th {
     background-color: #ecc535;
     padding: 0;
     margin-top: 10px;
-
 }
 
 .return-top {
@@ -218,4 +167,39 @@ th {
 .return-top a i {
     color: black;
     padding: 10px;
+}
+
+/*--------- Media quieries --------*/
+@media (max-width: 575.98px){
+    
+     .modal{
+        max-width: 95%;   
+      }
+     .title{
+       font-size: 1em;
+       font-weight: bold;
+    }
+    .reset a i{
+         padding-left: 5px;
+         font-size: 1.3em;
+     }
+    .info-icon a i{
+        padding-right: 17px;
+        font-size: 1.3em;
+             }
+    .gender-percent {
+       width: 300px;
+       height: 50px;
+     }
+    
+    .gender-icon {
+        font-size: 3rem;
+        padding: 2px;
+        width: 30px;
+        height: 30px;
+    }
+    .percent {
+       font-weight: 600;
+       padding: 5px 1px;
+    }
 }
