--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ body {
     margin: auto;
     padding-left: 0;
     padding-right: 0;
+    
 }
 
 .content-wrapper {
@@ -108,7 +109,7 @@ body {
 }
 ----*/
 
-.chart {
+.graph {
     width: 100%;
     height: 100%;
     margin: 0 0 10px 0;
@@ -122,6 +123,8 @@ body {
 .chart-content {
     font-size: .8em;
     padding: 10px 5% 0px 6%;
+    display: inline-block;
+   
 }
 
 /*---------Table & Pagination--------*/
