--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,8 @@ body {
     align-items: center;
 }
 
-.title {
+.title,
+.title:hover{
     color: black;
     text-decoration: none;
     font-size: 2em;
@@ -122,6 +123,9 @@ body {
     font-size: .8em;
     padding: 10px 5% 0px 6%;
     
+}
+.chart-content p {
+    float: left;
 }
 
 /*---------Table & Pagination--------*/
