--- a/static/css/style.css
+++ b/static/css/style.css
@@ -162,7 +162,10 @@ th {
     padding: 0;
     margin-top: 10px;
 }
-
+.page-footer h5{
+    font-size: 1em;
+    font-weight: bold;
+}
 .return-top {
     text-align: right;
     font-size: 1.7em;
