--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,12 +75,22 @@ h5 {
 
 /*--------- Main --------*/
 
+.chart-content {
+    font-size: .8em;
+    padding: 10px 5% 0px 6%;
+    
+}
+.chart-content p {
+    float: left;
+}
+
+/*------Gender icon & Percentage------*/
+
 .gender-percent {
     width: 400px;
     height: 50px;
     display: flex;
     margin: auto;
-   
 }
 
 .icon-percent {
@@ -107,8 +117,7 @@ h5 {
     padding-left: 15px;
     padding-right:10px;
 }
-
-
+/*--------Bar graph------*/
 
 #bar-alignment .x.axis text {
     text-anchor: end !important;
@@ -119,19 +128,11 @@ h5 {
     transform: rotate(-35deg);
 
 }
+/*--------Pie Chart------*/
 .graph {
     width: 100%;
     height: 100%;
     margin: 0 0 10px 0;
-}
-
-.chart-content {
-    font-size: .8em;
-    padding: 10px 5% 0px 6%;
-    
-}
-.chart-content p {
-    float: left;
 }
 
 /*---------Table & Pagination--------*/
